fix spacing on blog

--- a/styles/main.css
+++ b/styles/main.css
@@ -59,6 +59,3 @@ h3 {
   width: 30%;
 }
 
-.energy-image{
-  max-height:50%;
-}
